attempt to fix form alignment

--- a/styles/index.css
+++ b/styles/index.css
@@ -623,7 +623,8 @@ body {
 /* Contact Form */
 
 .contact-form {
-    margin-top: 3em;
+    margin: 3em 0 0 0 !important;
+    padding: 0 !important;
     display: flex;
     flex-direction: column;
     align-items: center;
